    was set to None, introduced in r6711 (cascade deleted
    items into session during add()).
    
- sql
  - The most common result processors conversion function were
    moved to the new "processors" module.  Dialect authors are
    encouraged to use those functions whenever they correspond
    to their needs instead of implementing custom ones.

  - Added math negation operator support, -x.
  
  - FunctionElement subclasses are now directly executable the
    same way any func.foo() construct is, with automatic 
    SELECT being applied when passed to execute().
    
  - The "type" and "bind" keyword arguments of a func.foo() 
    construct are now local to "func." constructs and are 
    not part of the FunctionElement base class, allowing 
    a "type" to be handled in a custom constructor or 
    class-level variable.
    
  - Restored the keys() method to ResultProxy.
  
  - The type/expression system now does a more complete job
    of determining the return type from an expression
    as well as the adaptation of the Python operator into 
    a SQL operator, based on the full left/right/operator
    of the given expression.  In particular
    the date/time/interval system created for Postgresql
    EXTRACT in [ticket:1647] has now been generalized into
    the type system.   The previous behavior which often
    occured of an expression "column + literal" forcing
    the type of "literal" to be the same as that of "column"
    will now usually not occur - the type of 
    "literal" is first derived from the Python type of the 
    literal, assuming standard native Python types + date 
    types, before falling back to that of the known type
    on the other side of the expression.  Also part
    of [ticket:1683].

  - Made sqlalchemy.sql.expressions.Executable part of public 
    API, used for any expression construct that can be sent to
    execute().  FunctionElement now inherits Executable so that